# logospatrum

./: .dockerignore  .env.example  .env.prod.example  .gitignore  .gitmodules  CLAUDE.md  HTTPS_SETUP_GUIDE.md  README.md  STATUS.md  books.json  config.py  database.py  docker-compose.prod.yml  docker-compose.yml  embedding_service.py  main.py  migrations.py  models.py  rag_service.py  repository.py  requirements.txt  text_service.py
apps/backend/: CLAUDE.md  Dockerfile  bench_tools.py  dev.ps1  langgraph.json  pyproject.toml
apps/backend/src/backend/: __init__.py  catalog.py  config.py  db.py  eval_runner.py  graph.py  observability.py  prompts.py  server.py  skill_tools.py  skills_registry.py  styles_middleware.py  styles_registry.py
apps/backend/src/backend/budget/: __init__.py  node.py  pricing.py  session.py  storage.py
apps/backend/src/backend/embeddings/: __init__.py  service.py
apps/backend/src/backend/skills/: apologetics.md  pastoral.md
apps/backend/tests/: conftest.py
apps/backend/tests/integration/: smoke_goldset.py  test_goldset.py  test_smoke.py
apps/backend/tests/unit/: test_budget_endpoint.py  test_budget_node.py  test_budget_pricing.py  test_budget_storage.py  test_catalog.py  test_embeddings_service.py  test_eval_runner.py  test_expand_concept.py  test_filters.py  test_lexical_search.py  test_list_authors.py  test_list_works.py  test_prompts_wiring.py  test_read_passage.py  test_semantic_search.py  test_session_hmac.py  test_skill_tools.py  test_skills_registry.py  test_styles_middleware.py  test_styles_registry.py
bench/: baseline.json  (+4 more)
(+146 files in other folders)
