[project]
name = "patristic-backend"
version = "0.1.0"
requires-python = ">=3.12"
dependencies = [
    "langgraph>=0.2.50",
    "langchain>=0.3",
    "langchain-core>=0.3",
    "langchain-openai>=0.2",
    "deepagents>=0.0.10",
    "sentence-transformers>=3.0",
    "psycopg[binary,pool]>=3.2",
    "pgvector>=0.3",
    "pydantic>=2.7",
    "pydantic-settings>=2.3",
    "fastapi>=0.115",
    "uvicorn>=0.30",
    "pyyaml>=6.0",
    "mcp>=1.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.2",
    "pytest-asyncio>=0.23",
    "pytest-cov>=5.0",
    "httpx>=0.27",
    "ruff>=0.5",
]

[build-system]
requires = ["setuptools>=70"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["src"]

# Skill/style registries are *.md files loaded at runtime via
# Path(__file__).parent / "skills" (see graph.py). Without this stanza pip
# install . copies only .py modules; on prod _SKILLS/_STYLES silently degrade
# to empty and the agent loses apologetics/pastoral/style middleware.
[tool.setuptools.package-data]
backend = ["skills/*.md", "styles/*.md"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
